--- a/Web Development/Lec6/DemoPage/styles.css
+++ b/Web Development/Lec6/DemoPage/styles.css
@@ -1,42 +1,74 @@
-body {
-    font-family: "Segoe UI", Tahoma, Verdana, Geneva, sans-serif;
-    margin: 0px;
+html {
+    border: 0;
+    margin: 0;
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+    scroll-behavior: smooth;
+}
+
+header h1 {
+    float: left;
+    margin-top: 2%;
+    padding-left: 5%;
+    font-weight: 400;
+}
+
+.navlist {
+    display: flex;
+    float: right;
+    padding-right: 3rem;
 }
 
 li {
     list-style: none;
+    padding: 0 2rem;
+    margin-top: 1rem;
+    font-size: 1.5rem;
 }
 
 a {
     text-decoration: none;
 }
 
-header {
-    display: flex;
-    /* to allign vertically */
-    align-items: center;
-    /* horozontally align */
-    justify-content: space-between;
-    margin: 0;
+a:link,
+a:visited {
+    color: black;
+}
+
+a:hover,
+a:active {
+    color: red
+}
+
+.showcase {
+    width: 95%;
+    height: 90vh;
+    margin: auto;
+    overflow: hidden;
 }
 
 .description {
     display: flex;
+    margin: 1rem;
 }
 
-nav {
-    display: flex;
+.container {
+    text-align: center;
+    padding: 1.5rem;
 }
 
-.navlist {
-    display: flex;
-    justify-content: space-around;
+h2 {
+    font-weight: 500;
 }
 
-h1 {
-    font-weight: 400;
+p {
+    font-size: 1.5rem;
+    padding-left: 2rem;
 }
 
-.showcase img {
-    /* height: 90vh; */
+footer {
+    text-align: center;
+    font-size: 2rem;
+    color: white;
+    background-color: black;
+    padding: 1.5rem;
 }
